# hipaasynth1

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  Contributing.md  ORPHAN_AUDIT.md  README.md  RELEASE_NOTES_v1.0.0.md  REMOVED.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
examples/: cc_demo.py  fairness_passport_demo.py  polymorphic_demo.py  psf_demo.py  rare_disease_demo.py
hipaasynth/: .gitignore  AGENTS.md  CLAUDE.md  GROK_HARNESS_SALES_STRATEGY.md  HALO.md  PROPOSAL_forward_looking.md  __init__.py  requirements.txt
hipaasynth/adversarial/: __init__.py  evaluator.py  perturbations.py  reducer.py  run_context_shim.py  temporal.py
hipaasynth/cc/: __init__.py  framework.py  generator.py  report.py
hipaasynth/core/: __init__.py  anchor.py  anchor_stamp.py  checkpoints.py  config.py  hashing.py  logger.py  manifest.py  model_interface.py  profile_loader.py  run_context.py  schema.py
hipaasynth/dif/: __init__.py  framework.py  model_interface.py  report.py
hipaasynth/exporters/: __init__.py  exporters.py
hipaasynth/modules/: calibration_validator.py  run_all_modules.py
hipaasynth/modules/cardiology/: medications.py  risk_scores.py
hipaasynth/modules/chf/: chf_generator.py
hipaasynth/modules/copd/: copd_generator.py
hipaasynth/modules/diabetes/: __init__.py  complications.py  glycemic.py  outcomes.py  population.py  treatments.py
hipaasynth/modules/dmd/: dmd.py
hipaasynth/modules/fabry/: fabry.py
hipaasynth/modules/oud/: oud_generator.py
hipaasynth/modules/sepsis/: __init__.py  observations.py
hipaasynth/modules/sepsis/oncology/: biomarkers.py  comorbidity.py  outcomes.py  population.py  staging.py  treatment.py
hipaasynth/modules/sma/: sma.py
hipaasynth/modules/snf/: README.md  __init__.py  snf_cohort.csv  snf_cohort.json  twin_validation_details.json  twin_validation_report.txt
hipaasynth/modules/stroke/: observations.py
hipaasynth/pipelines/: generator_anthropometrics.py  generator_conditions.py  generator_demographics.py  generator_numerics.py  population_pipeline.py  run_pipeline.py
hipaasynth/polymorphic/: __init__.py  forms.py  metrics.py
hipaasynth/profiles/: fargo_nd.json  karachi_pakistan.json  lagos_nigeria.json  minot_nd.json  nd_tribal_region_a.json  nd_tribal_region_a_v2.json  nd_tribal_region_b.json  nd_tribal_region_b_v2.json  nd_tribal_standing_rock.json  nd_tribal_turtle_mountain.json  standing_rock_nd.json  turtle_mountain_nd.json  us_default.json
hipaasynth/psf/: __init__.py  framework.py  generator.py  report.py
hipaasynth/run/: demo_reproducibility.py  diabetes_pipeline.py  generate_sample.py  main.py
hipaasynth/validation/: validator.py
tests/: conftest.py  test_cc.py  test_dif.py  test_integration.py  test_polymorphic.py  test_psf.py
